# NuxtBeats

./: .gitignore  README.md  app.config.ts  app.vue  eslint.config.mjs  nuxt.config.ts  package.json
app/: app.config.ts  app.vue  error.vue
app/assets/css/: main.css
app/composables/: playlists.ts
app/pages/: discover.vue  favorites.vue  index.vue  recent.vue
app/pages/playlists/: [uuid].vue
app/stores/: data.ts  settings.ts
app/utils/: helpers.ts  tauri.ts
assets/css/: main.css
components/: MusicPlayer.vue  NavBar.vue
i18n/: i18n.config.ts
i18n/locales/: en-GB.json  it-IT.json
layouts/: default.vue
pages/: index.vue
src-tauri/: Cargo.toml  tauri.conf.json
tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
tauri/src/: api.rs  command.rs  error.rs  handler.rs  lib.rs  player.rs
